--- a/layouts/404.html
+++ b/layouts/404.html
@@ -3,7 +3,7 @@
     <h1 class="h5 mb-3 mt-5 pt-5">404</h1>
     <div class="row mb-3">
       <p>
-        For sure this is not what you are looking for.
+        For sure this is not what you are looking for. 你走錯傳送門了。
       </p>
       <a href="{{ .Site.Home.RelPermalink }}">
         ← Return to the home page
