--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,7 +5,7 @@
       {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
     </div>
     {{ .Content }}
-    {{ $paginator := .Paginate (where .Data.Pages "Type" "posts") }}
+    {{ $paginator := .Paginate (where .Data.Pages "Type" "!=") }}
     {{ range $paginator.Pages }}
     <div class="row mb-3">
       {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
